--- a/client/waterly/client/src/components/HomePage.css
+++ b/client/waterly/client/src/components/HomePage.css
@@ -10,14 +10,21 @@
     margin-left: 0.5em;
   }
   .masthead h1.ui.header {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    font-size: 4em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    font-size: 3em;
     font-weight: normal;
   }
-  .masthead h2 {
-    font-size: 1.7em;
+  .masthead h3 {
+    font-size: 1.2em;
     font-weight: normal;
+    margin-bottom: 0.5em;
+  }
+
+  .footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
   }
 
   .footer.segment {
